<resources>
    <string name="app_name">PointMarket</string>
    <string name="regProd">Cadastrar Produto</string>
    <string name="list">Listar</string>
    <string name="edit">Editar</string>
    <string name="delete">Excluir</string>
    <string name="contact">Contate-nos</string>
    <string name="about">Sobre</string>
    <string name="regName">Nome</string>
    <string name="regDesc">Descrição</string>
    <string name="regValue">Valor</string>
    <string name="regVisibility">Visibilidade</string>
    <string name="btnRegister">Cadastrar</string>
    <string name="course">Programação para Web III</string>
    <string name="author">Leonardo Kepler Mesquita</string>
    <string name="start">Início</string>
    <string name="navigation_drawer_open">Abrir menu</string>
    <string name="navigation_drawer_close">Fechar menu</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Login ou Cadastro</string>
    <string name="action_sign_in_short">Login</string>
    <string name="welcome">"Bem vindo !"</string>
    <string name="invalid_username">Usuário invalido</string>
    <string name="invalid_password">A senha deve ter mais de 5 caracteres</string>
    <string name="login_failed">"Erro no login"</string>
    <string name="title_activity_reg_user">Cadastrar Usuário</string>
    <string name="cancel">Cancelar</string>
    <string name="action_logout">Sair</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>