<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.pointmarket.fragments.HomeFragment"
        android:label="@string/start"
        tools:layout="@layout/fragment_home" />

    <activity
        android:id="@+id/nav_regproduct"
        android:name="com.example.pointmarket.activities.RegProductActivity"
        android:label="@string/regProd"
        tools:layout="@layout/activity_regproduct" />

    <fragment
        android:id="@+id/nav_list"
        android:name="com.example.pointmarket.fragments.ListFragment"
        android:label="@string/list"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.pointmarket.fragments.ContactFragment"
        android:label="@string/contact"
        tools:layout="@layout/fragment_contact" />
</navigation>