<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegProductActivity">

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="@dimen/logoSize"
      android:layout_height="@dimen/logoSize"
      android:layout_marginTop="@dimen/marginLarge"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@mipmap/ic_launcher_round"
      android:contentDescription="@string/app_name" />

  <EditText
      android:id="@+id/textViewName"
      android:layout_width="@dimen/zero"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/eight"
      android:layout_marginLeft="@dimen/eight"
      android:layout_marginTop="@dimen/marginNormal"
      android:layout_marginEnd="@dimen/eight"
      android:layout_marginRight="@dimen/eight"
      android:hint="@string/regName"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView" />

  <EditText
      android:id="@+id/textViewValue"
      android:layout_width="@dimen/zero"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/eight"
      android:layout_marginLeft="@dimen/eight"
      android:layout_marginTop="@dimen/eight"
      android:layout_marginEnd="@dimen/eight"
      android:layout_marginRight="@dimen/eight"
      android:hint="@string/regValue"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textViewDescription" />

  <EditText
      android:id="@+id/textViewDescription"
      android:layout_width="@dimen/zero"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/eight"
      android:layout_marginLeft="@dimen/eight"
      android:layout_marginTop="@dimen/eight"
      android:layout_marginEnd="@dimen/eight"
      android:layout_marginRight="@dimen/eight"
      android:hint="@string/regDesc"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textViewName" />

  <Button
      android:id="@+id/btnReg"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/marginSmall"
      android:text="@string/btnRegister"
      android:onClick="regProduto"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textViewValue" />

</androidx.constraintlayout.widget.ConstraintLayout>