<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditProductActivity">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/logoSize"
        android:layout_height="@dimen/logoSize"
        android:layout_marginTop="@dimen/marginLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight"
        android:layout_marginLeft="@dimen/eight"
        android:layout_marginTop="@dimen/marginNormal"
        android:layout_marginEnd="@dimen/eight"
        android:layout_marginRight="@dimen/eight"
        android:text="@string/regName"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textViewValue"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight"
        android:layout_marginLeft="@dimen/eight"
        android:layout_marginTop="@dimen/eight"
        android:layout_marginEnd="@dimen/eight"
        android:layout_marginRight="@dimen/eight"
        android:text="@string/regValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescription" />

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight"
        android:layout_marginLeft="@dimen/eight"
        android:layout_marginTop="@dimen/eight"
        android:layout_marginEnd="@dimen/eight"
        android:layout_marginRight="@dimen/eight"
        android:text="@string/regDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <Button
        android:id="@+id/btnChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewValue" />
</androidx.constraintlayout.widget.ConstraintLayout>