<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterProduct_Activity">

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="@dimen/logoSize"
      android:layout_height="@dimen/logoSize"
      android:layout_marginTop="@dimen/marginLarge"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@mipmap/ic_launcher_round"
      android:contentDescription="@string/app_name" />

  <TextView
      android:id="@+id/textViewName"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/regName"
      app:layout_constraintBottom_toTopOf="@+id/editTextTextName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.268"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView"
      app:layout_constraintVertical_bias="1.0" />

  <EditText
      android:id="@+id/editTextTextName"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/marginNormal"
      android:ems="10"
      android:inputType="textPersonName"
      android:text="@string/regName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView"
      android:importantForAutofill="no" />

  <TextView
      android:id="@+id/textViewDescription"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/regDesc"
      app:layout_constraintBottom_toTopOf="@+id/editTextDescription"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.287"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextName"
      app:layout_constraintVertical_bias="1.0" />

  <EditText
      android:id="@+id/editTextDescription"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/marginSmall"
      android:ems="10"
      android:inputType="textPersonName"
      android:text="@string/regDesc"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextName"
      android:importantForAutofill="no" />

  <TextView
      android:id="@+id/textViewValue"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/regValue"
      app:layout_constraintBottom_toTopOf="@+id/editTextValue"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.264"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextDescription"
      app:layout_constraintVertical_bias="1.0" />

  <EditText
      android:id="@+id/editTextValue"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/marginSmall"
      android:ems="10"
      android:inputType="number"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextDescription"
      android:autofillHints="" />

  <com.google.android.material.switchmaterial.SwitchMaterial
      android:id="@+id/switch1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/marginSmall"
      android:text="@string/regVisibility"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextValue" />

  <Button
      android:id="@+id/button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/marginSmall"
      android:text="@string/btnRegister"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/switch1" />

</androidx.constraintlayout.widget.ConstraintLayout>