<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/marginSmall"
    app:cardElevation="@dimen/eight">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/eight"
        app:layout_constraintBottom_toTopOf="@+id/textViewEndereco"
        app:layout_constraintTop_toTopOf="@+id/textViewEndereco">

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/eight"
            android:layout_marginLeft="@dimen/eight"
            android:layout_marginTop="@dimen/eight"
            android:layout_marginEnd="@dimen/eight"
            android:layout_marginRight="@dimen/eight"
            android:text="@string/regName"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/eight"
            android:layout_marginLeft="@dimen/eight"
            android:layout_marginTop="@dimen/marginNormal"
            android:layout_marginEnd="@dimen/eight"
            android:layout_marginRight="@dimen/eight"
            android:text="@string/regDesc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewValue"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/eight"
            android:layout_marginLeft="@dimen/eight"
            android:layout_marginTop="@dimen/eight"
            android:layout_marginEnd="@dimen/eight"
            android:layout_marginRight="@dimen/eight"
            android:text="@string/regValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDescription" />

        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/eight"
            android:layout_marginLeft="@dimen/eight"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnEdit"
            app:srcCompat="@drawable/ic_delete"
            tools:ignore="VectorDrawableCompat" />

        <ImageButton
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginSmall"
            android:layout_marginEnd="@dimen/marginNormal"
            android:layout_marginRight="@dimen/marginNormal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textViewValue"
            app:srcCompat="@drawable/ic_edit"
            tools:ignore="VectorDrawableCompat" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
